fix: added some gap between the buttons on the right of the header when not connected

--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -46,6 +46,10 @@ $scrollingAnimationDuration: 0.5s;
           align-items: center;
         }
 
+        .right.notConnected {
+          gap: 1rem;
+        }
+
         .underlineButton {
           position: relative;
           transition: color 0.2s ease-in-out;
